Refactoring shared code into AbstractBridge classes